--- a/app/src/main/res/layout/activity_concepts_list_screen.xml
+++ b/app/src/main/res/layout/activity_concepts_list_screen.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ConceptsListScreen">
 
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="358dp"
@@ -20,6 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.177" />
+
+    <Button
+        android:id="@+id/toastConceptBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Toast Concept"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <TextView
         android:id="@+id/textView3"
